@startuml
title Domain Package Class Diagram
skinparam classAttributeIconSize 0

package "Domain" {
    abstract class User {
        +Long id
        +String name
        +String email
        +String password
        +String phoneNumber
        +String userType
    }

    class Customer {
        +String address
        +CustomerTier tier
    }

    abstract class Staff {
        +String role
        +{abstract} boolean canHandle(OrderStatus status)
    }
    
    class KitchenStaff {
        +boolean canHandle(OrderStatus status)
    }
    class DeliveryStaff {
        +boolean canHandle(OrderStatus status)
    }

    class Order {
        +Long orderId
        +String orderDate
        +String deliveryAddress
        +String dinnerType
        +String servingStyle
        +OrderStatus status
        +BigDecimal totalPrice
        +BigDecimal discountAmount
        +Integer discountRate
        +Integer request
        +addOrderItem(OrderItem item)
    }

    enum OrderStatus {
        PENDING
        INPROGRESS
        READY
        DELIVERED
        CANCELLED
    }

    class OrderItem {
        +Long id
        +int quantity
        +BigDecimal price
        +MenuItem menuItem
    }

    class OrderProcessLog {
        +Long id
        +OrderStatus status
        +Long staffId
        +LocalDateTime processTime
        +String staffRole
    }

    class MenuItem {
        +Long id
        +String name
        +BigDecimal unitPrice
        +boolean isBaseItem
        +String dinnerType
    }

    class Inventory {
        +Long stockID
        +String itemName
        +BigDecimal quantityAvailable
        +String unit
        +BigDecimal minQuantity
        +String status
        +BigDecimal cost
        +updateStatus()
        +decreaseQuantity(BigDecimal amount)
        +increaseQuantity(BigDecimal amount)
    }

    class Recipe {
        +Long id
        +MenuItem menuItem
        +Inventory inventory
        +BigDecimal requiredQuantity
    }
}

' Relationships within Domain
User <|-- Customer
User <|-- Staff
Staff <|-- KitchenStaff
Staff <|-- DeliveryStaff

Order "1" --> "1" Customer : ordered by
Order "1" *-- "*" OrderItem : contains
OrderItem "*" --> "1" MenuItem : represents
Order "1" *-- "*" OrderProcessLog : audit log

MenuItem "1" --> "*" Recipe : has recipes
Recipe "*" --> "1" Inventory : uses ingredient
@enduml
